# tinygraphs

./: LICENSE  README.md  pyproject.toml
testing/: test-nb.ipynb
tinyGraphs/: __init__.py  plot.py
tinyGraphs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
