[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinygraphs"
version = "0.0.7"
description = "A minimal library for plotting training progress in Jupyter/Colab"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name="rkal", email="rohkal505@gmail.com" }
]
keywords = ["training", "plotting", "machine-learning", "notebook"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "matplotlib",
    "IPython",
]

[tool.hatch.build]
include = [
    "*.png"
]