[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinygraphs"
version = "2.0.1"
description = "A minimal library for plotting training progress in Jupyter/Colab"
readme = "README.md"
license = "MIT"
authors = [
  { name="rkal", email="rohkal505@gmail.com" }
]
keywords = ["training", "plotting", "machine-learning", "notebook"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "matplotlib",
    "IPython",
]

[tool.setuptools.packages.find]
include = ["tinygraphs*"]
exclude = ["testing*"]

[tool.hatch.build]
include = [
    "*.png"
]